crates/cli/tests/snapshots/run_system_test__unix__handles_echo.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
hello
▪▪▪▪ unix:echo
▪▪▪▪ unix:echo (100ms)

Tasks: 1 completed
 Time: 100ms



