crates/cli/tests/snapshots/run_system_test__unix__handles_ls.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
affectedFiles.sh
args.sh
cwd.sh
envVars.sh
envVarsMoon.sh
exitNonZero.sh
exitZero.sh
moon.yml
outputs.sh
standard.sh
▪▪▪▪ unix:ls
▪▪▪▪ unix:ls (100ms)

Tasks: 1 completed
 Time: 100ms



