crates/cli/tests/snapshots/run_system_test__unix__handles_process_exit_nonzero.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ unix:exitNonZero
stdout
▪▪▪▪ unix:exitNonZero (100ms)
stderr
Error:   × Failed to run bash (exit code 1)



