crates/cli/tests/snapshots/run_system_test__unix__handles_process_exit_nonzero_inline.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ unix:exitNonZeroInline
▪▪▪▪ unix:exitNonZeroInline (100ms)
Error:   × Process bash failed with a 2 exit code.



