crates/cli/tests/snapshots/run_system_test__unix__handles_process_exit_zero.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
stdout
▪▪▪▪ unix:exitZero
▪▪▪▪ unix:exitZero (100ms)

Tasks: 1 completed
 Time: 100ms

stderr


