crates/cli/tests/snapshots/run_system_test__unix__inherits_moon_env_vars.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ unix:envVarsMoon
MOON_CACHE=read-write
MOON_CACHE_DIR=<WORKSPACE>/.moon/cache
MOON_HOME=<WORKSPACE>/.moon-home
MOON_LOG=trace
MOON_PROJECT_ID=unix
MOON_PROJECT_ROOT=<WORKSPACE>/unix
MOON_PROJECT_SNAPSHOT=<WORKSPACE>/.moon/cache/states/unix/snapshot.json
MOON_PROJECT_SOURCE=unix
MOON_TARGET=unix:envVarsMoon
MOON_TASK_ID=envVarsMoon
MOON_THEME=dark
MOON_WORKING_DIR=<WORKSPACE>
MOON_WORKSPACE_ROOT=<WORKSPACE>
▪▪▪▪ unix:envVarsMoon (100ms)

Tasks: 1 completed
 Time: 100ms
