crates/cli/tests/snapshots/run_system_test__unix__passes_args_through.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ unix:passthroughArgs
Args: -aBc --opt value --optCamel=value foo 'bar baz' --opt-kebab 123
▪▪▪▪ unix:passthroughArgs (100ms)

Tasks: 1 completed
 Time: 100ms



