crates/cli/tests/snapshots/run_system_test__unix__passes_args_through_when_ran_in_project_root.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ unix:passthroughArgs
Arg 1: -aBc ("-aBc")
Arg 2: --opt ("--opt")
Arg 3: value ("value")
Arg 4: --optCamel=value ("--optCamel=value")
Arg 5: foo ("foo")
Arg 6: bar baz ("bar baz")
Arg 7: baz qux ("baz qux")
Arg 8: --opt-kebab ("--opt-kebab")
Arg 9: 123 ("123")
▪▪▪▪ unix:passthroughArgs (100ms)

Tasks: 1 completed
 Time: 100ms
