crates/cli/tests/snapshots/run_system_test__unix__retries_on_failure_till_count.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ unix:retryCount
stdout
▪▪▪▪ unix:retryCount (attempt 2/4)
stdout
▪▪▪▪ unix:retryCount (attempt 3/4)
stdout
▪▪▪▪ unix:retryCount (attempt 4/4)
stdout
▪▪▪▪ unix:retryCount (100ms)
stderr
stderr
stderr
stderr
Error: task_runner::run_failed

  × Task unix:retryCount failed to run.
  ╰─▶ Process bash failed with a 1 exit code.
