crates/cli/tests/snapshots/run_system_test__unix__runs_bash_script.snap
---
source: crates/cli/tests/run_system_test.rs
expression: assert.output()
---
▪▪▪▪ unix:bash
stdout
▪▪▪▪ unix:bash (100ms)
stderr

Tasks: 1 completed
 Time: 100ms



