crates/cli/tests/snapshots/run_system_test__unix__runs_from_project_root.snap
---
source: crates/cli/tests/run_system_test.rs
assertion_line: 126
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ unix:runFromProject
<WORKSPACE>/unix
▪▪▪▪ unix:runFromProject (100ms)

Tasks: 1 completed
 Time: 100ms



