crates/cli/tests/snapshots/run_system_test__unix__runs_from_workspace_root.snap
---
source: crates/cli/tests/run_system_test.rs
assertion_line: 138
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ unix:runFromWorkspace
<WORKSPACE>
▪▪▪▪ unix:runFromWorkspace (100ms, 4a89312a)

Tasks: 1 completed
 Time: 100ms



